--- a/index.htm
+++ b/index.htm
@@ -215,6 +215,9 @@ Dr. Guanfeng Liu is a Senior Lecturer (Associate Professor in North American) in
 
 
 
+
+<li>Guliu Liu, Lei Li, <b>Guanfeng Liu</b>, and Xindong Wu, Social Group Query Based on Multi-Fuzzy-Constrained Strong Simulation, <b><i>ACM Transactions on Knowledge Discovery from Data (TKDD)</b></i> Vol. 16, Issue 3, pp. 1-27, 2022.</li>
+
 <Li>Pengfei Ding, <b>Guanfeng Liu</b>, Yan Wang, Kai Zheng and Xiaofang Zhou, MCTS: Adaptive Monte Carlo Tree Search for Temporal Path Discovery, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> (accepted in October 2021).</li>
 
 <li>Guohao Sun, <b>Guanfeng Liu</b>, Yan Wang, Mehmet A Orgun, Quan Z. Sheng and Xiaofang Zhou, Partition-Aware Graph Pattern based Node Matching with Updates, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> (accepted in July 2021).</li>
