--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@ line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
 <hr style="height: 3px;"> <br>
 <div id="description">
 <span style="font-size:110%">
-Dr. Guanfeng Liu is a Senior Lecturer (Associate Professor in North American) in <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/department-of-computing"> School of Computing </a>, <a href="http://www.mq.edu.au/"> Macquarie University</a>, Sydney, Australia. Guanfeng got his PhD in computer science from <a href="http://www.mq.edu.au/">Macquarie University</a> in 2013. His research interests include graph database, trust management, and social network mining.
+Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/department-of-computing"> School of Computing </a>, <a href="http://www.mq.edu.au/"> Macquarie University</a>, Sydney, Australia. Guanfeng got his PhD in computer science from <a href="http://www.mq.edu.au/">Macquarie University</a> in 2013. His research interests include graph database, trust management, and social network mining.
  </span>
 </div>
 <br>
