--- a/index.htm
+++ b/index.htm
@@ -268,6 +268,7 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	<br>
 	<ol>
 
+<li>Chen Niu, An Liu, <b>Guanfeng Liu</b>, Jiajie Xu, and Lei Zhao, Representation Learning Based Query Decomposition for Batch Shortest Path Processing in Road Networks, <b>ICSOC</b> 2021.</li>
 
 <li>Feng Zhu, Yan Wang, Chaochao Chen, Jun Zhou, Longfei Li and <b>Guanfeng Liu</b>, Cross-Domain Recommendation: Challenges, Progress, and Prospects, <b>IJCAI</b> 2021.</li>
 
@@ -322,7 +323,8 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <div id="experience">
       <span class="sb">Working and Visiting</span> <br>
       <ul>
-      	<li>Lecturer/Assistant Professor, Macquarie University, Sydney, Australia, June 2018 - now</li>
+      	<li>Senior Lecturer, Macquarie University, Sydney, Australia, January 2021 - now</li>
+      	<li>Lecturer/Assistant Professor, Macquarie University, Sydney, Australia, June 2018 - December 2020</li>
 		<li>Visiting Senior Lecturer, The University of Queensland, Brisbane, Australia, June 2017 - June 2018</li>
 		<li>Associate Professor, Soochow University, China, October 2013 - June 2017</li>
 		<li>Visiting Scholar, Macquarie University, Sydney, Australia, August 2015</li>
@@ -338,9 +340,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
       <span class="sb">Teaching</span> <br>
       
       <ul>
-	    <li>Mining Unstructured Data, Macquarie University, S1 2020 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
-		<li>Big Data Technology, Macquarie University, S2 2019, S2 2020 (for Postgraduate Students, Lecturer)</li>
-		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020 (for Undergraduate Students, Lecturer)</li>
+	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
+		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021 (for Postgraduate Students, Lecturer)</li>
+		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020, 2021 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced System and Network Security, Macquarie University, S2 2018 (for Postgraduate Students, Lecturer)</li>
       	<li>Enterprise Systems Integration, Macquarie University, S2 2018, S2 2019 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced Technology for High Dimensional Data, The University of Queensland, S1 2018 (for Postgraduate Students, Course Coordinator and Lecturer)</li>
@@ -368,27 +370,32 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
          <li>General Co-Chair, The 9th EAI International Conference on Cloud Computing (<a href="http://cloudcomp.eu/">CloudComp2019</a>), 4-5 December, 2019, Sydney, NSW, Australia.</li>
 		 <li>General Co-Chair, The International Workshop on Web Information Systems in the Era of AI in conjunction with WISE 2019, 26-30 November, 2019, Hong Kong, China.</li>
 		 
-		 <li> Guest Editor, Special issue on Green Computing in Complex Systems, Complexity (SCI), 2020. </li>
+	    <li> Guest Editor, Special issue on Computational Intelligence in Big Graph Data Management, IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI), 2021.</li>
+
+	    <li> Guest Editor, Special issue on Green Computing in Complex Systems, Complexity (SCI), 2020. </li>
 		<li> Guest Editor, Special issue on Knowledge Graph and Deep Learning, Journal of Database Management (JDM, SCI), 2020. </li>
 
        <li>Guest Editor, Special issue on Graph Data Management in Online Social Networks, World Wide Web Journal (SCI, CCF B), 2019. </li>
 
        <li>Guest Editor, Special issue on Trust, Privacy, and Security in Crowdsourcing Computing, World Wide Web Journal (SCI, CCF B), 2018. </li>
 	   
+	   <li>PC Co-Chair, The 3rd International Workshop on Privacy, Security, and Trust in Computational Intelligence (PSTCI2021), in conjunction with CIKM2021, Gold Coast, Queensland, Australia, 1-5, November, 2021.</li>
+
 	   <li>PC Co-Chair, Australasian Web Conference 2020 (AWC2020), 2-7 February, 2020, Melbourne, VIC, Australia.</li>
 	  <li>PC Co-Chair, Australasian Web Conference 2019 (AWC2019), 29-31 January, 2019, Sydney, NSW, Australia.</li>
 	  
 	  
 
-		<li>PC Co-Chair, The Second International Workshop on Big Data Management and Service (BDMS2015) in conjunction with DASFAA 2015, Hanoi, Vietnam, 20-23 April, 2015.</li>
-       <li>PC Co-Chair, The First Internal Workshops on Knowledge Acquisition, Representation and Management (KARM 2017) in conjunction with WISE 2017, Moscow, Russia, 7-11 October, 2017. </li>
+	
+       <li>PC Co-Chair, The First Internal Workshops on Knowledge Acquisition, Representation and Management (KARM 2017) in conjunction with WISE2017, Moscow, Russia, 7-11 October, 2017. </li>
+       	<li>PC Co-Chair, The Second International Workshop on Big Data Management and Service (BDMS2015) in conjunction with DASFAA2015, Hanoi, Vietnam, 20-23 April, 2015.</li>
 
        <li>Special Session Chair: DSAA2020</li>
        <li>Publication Chair: APWeb2014, APWeb2016, BESC2016</li>
        <li>Publicity Chair: ATC2013, ATC2014</li>
 
-		<li>PC Member: IJCAI2022</li>
-	    <li>PC Member: IJCAI2021(Senior PC), WWW2021, AAAI2021</li>
+		<li>PC Member: IJCAI2022, AAAI2022, WWW2022, IEEE BigComp2022, WISE2022</li>
+	    <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
 	   <li>PC Member: IJCAI2020 (Senior PC), VLDB2020 Demo, AAAI2020, WWW2020, DASFAA2020, ECAI2020, SCC2020, WISE2020</li>
 	   <li>PC Member: KDD2019, IJCAI2019, AAAI2019, CIKM2019, WISE2019, AI2019, BigComp2019, NDBC2019, IEEE DSC2019, IEEE SCC2019</li>
        <li>PC Member: DASFAA2018, NDBC2018, IJCAI2018, IEEE SCC2018, IEEE BigComp2018</li>
