--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@ line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
             <span>Deputy Director of Master by Research</span><br>
 			<span>Deputy Program Leader of Master of Information Systems Management</span><br>
 			 <!--<span>Program Leader of Master of Information System Management (MISM)</span><br>-->
-            <span><a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/department-of-computing/our-research/smart-system-and-data-engineering-group">Smart System and Data Engineering Research Group</a></span><br>
+            <span><a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing/our-research/smart-system-and-data-engineering-group">Smart System and Data Engineering Research Group</a></span><br>
             <span> <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/department-of-computing">School of Computing</a> </span><br>
             <span> <a href="http://www.mq.edu.au/">Macquarie University</a> </span><br>
             <span> Sydney, Australia, 2109</span><br>
@@ -185,7 +185,8 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
        	<li>Pengfei Ding, PhD Student, 2021-</li>
 		<li>Rongwei Xu, MRes+PhD Student, 2021-</li>
 		<li>Alex Amarouche Roudjiat, MRes+PhD student, 2021-</li>
-		<li>Adeem Ali Anwar, PhD Student, 2021-</li>
+		<li>Xuankai Yang, PhD Student, 2022-</li>
+		<li>Han Zhang, PhD Student, 2022-</li>
 	 
 </ul>
 </div>
@@ -218,6 +219,13 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 <li>Guliu Liu, Lei Li, <b>Guanfeng Liu</b>, and Xindong Wu, Social Group Query Based on Multi-Fuzzy-Constrained Strong Simulation, <b><i>ACM Transactions on Knowledge Discovery from Data (TKDD)</b></i> Vol. 16, Issue 3, pp. 1-27, 2022.</li>
 
+
+<li>Yipeng Zhou, Juncai Liu, Jessie Hui Wang, Jilong Wang, <b>Guanfeng Liu</b>, Di Wu, Chao Li and and Shui Yu, USST: A Two-Phase Privacy-Preserving Framework for Personalized Recommendation with Semi-Distributed Training, <b><i>Information Sciences</b></i> Vol. 606, pp. 688-701, August 2022.</li>
+
+
+<li>An Liu, Yifan Zhang, Xiangliang Zhang, <b>Guanfeng Liu</b>, Yanan Zhang, Zhixu Li, Lei Zhao, Qing Li, Xiaofang Zhou, xRepresentation Learning With Multi-Level Attention for Activity Trajectory Similarity Computation, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> Vol. 34, Issue 5, pp. 2387-2400, 2022.</li>
+
+
 <Li>Pengfei Ding, <b>Guanfeng Liu</b>, Yan Wang, Kai Zheng and Xiaofang Zhou, MCTS: Adaptive Monte Carlo Tree Search for Temporal Path Discovery, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> (accepted in October 2021).</li>
 
 <li>Guohao Sun, <b>Guanfeng Liu</b>, Yan Wang, Mehmet A Orgun, Quan Z. Sheng and Xiaofang Zhou, Partition-Aware Graph Pattern based Node Matching with Updates, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> (accepted in July 2021).</li>
@@ -231,15 +239,19 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <li>Guohao Sun, <b>Guanfeng Liu</b>, Yan Wang, Mehmet A. Orgun, Quan Z. Sheng and Xiaofang Zhou, Incremental Graph Pattern based Node Matching with Multiple Updates, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE)</b></i> Vol. 33, Issue 4, pp. 1585-1600, 2021.</li>
 
 
+
+
+
 <li>Yanan Zhang, <b>Guanfeng Liu</b>, An Liu, Yifan Zhang, Zhixu Li, Xiangliang Zhang, and Qing Li, Personalized Geographical Influence Modeling for POI Recommendation, <b><i>IEEE Intelligent Systems,</i></b> Vol.35, Issue 5, 2020.</li>
 
 
 <li><b>Guanfeng Liu</b>, Yurong Wang, Zhixu Li, Bolong Zheng, and Kai Zheng, Strong Social Graph Based Trust-Oriented Graph Pattern Matching with Multiple Constraints, <b><i>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI),</i></b>pp.675-685, June 2020.</li>
 
-
+<li>Kai Zheng, Yan Zhao, Defu Lian, Bolong Zheng, <b>Guanfeng Liu</b>, Xiaofang Zhou, Reference-Based Framework for Spatio-Temporal Trajectory Compression and Query Processing, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE)</b></i>, Vol. 32, Issue 11, pp. 2227-2240, 2020. </li>
 
 <li>Anqi Zhao, <b>Guanfeng Liu</b>, Bolong Zheng, Yan Zhao, and Kai Zheng, Temporal Paths Discovery with Multiple Constraints in Attributed Dynamic Graphs, <b><i>World Wide Web Journal</i></b> 23:313–336, 2020.</li>
 
+<li>Zhong Yang, Bolong Zheng, Guohui Li, Nguyen Quoc Viet Hung, <b>Guanfeng Liu</b>, Kai Zheng, Searching Activity Trajectories by Exemplar, <b><i>ACM Transactions on Data Science (TDS)</b></i> Vol. 1, Issue 3, pp. 1-19, 2020.</li>
 
 <li><b>Guanfeng Liu</b>, Qun Shi, Kai Zheng, An Liu, Zhixu Li and Xiaofang Zhou, An Efficient Method for Top-K Graph Based Node Matching, <b><i>World Wide Web Journal </i></b> 22(3): 945-966, May 2019.</li>
 
@@ -255,18 +267,37 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 	
 
-	<li><b>Guanfeng Liu</b>, Feng Zhu, Kai Zheng, An Liu, Zhixu Li, Lei Zhao and Xiaofang Zhou, TOSI: A Trust-Oriented Social Influence Evaluation Method in Contextual Social Networks, <i><b> Neurocomputing</b></i> Vol 201, 130-140, 2016.</li> 
-	<li>Yan Wang, Lei Li and <b>Guanfeng Liu</b>, Social Context-Aware Trust Inference for Trust Enhancement in Social Network based Recommendations on Service Providers, <i><b>World Wide Web Journal</b></i> Vol.18, Issue 1, 2015.</li>  
-	<li><b>Guanfeng Liu</b>, Yan Wang, Mehmet A. Orgun and Ee-Peng Lim. Finding the Optimal Social Trust Path for the Selection of Trustworthy Service Providers in Complex Social Networks, <i><b>IEEE Transactions on Services Computing (TSC)</b></i>, Volume 6, Issue 2, 2013.</li>
-   	<li>Yongsheng Hao, <b>Guanfeng Liu</b> and Na Wen, An Enhanced Load Balancing Mechanism Based on Deadline Control on GridSim, <i><b>Future Generation Computer Systems</b></i>, Vol.28, No.4, April, 2012.</li>
+<li><b>Guanfeng Liu</b>, Feng Zhu, Kai Zheng, An Liu, Zhixu Li, Lei Zhao and Xiaofang Zhou, TOSI: A Trust-Oriented Social Influence Evaluation Method in Contextual Social Networks, <i><b> Neurocomputing</b></i> Vol 201, 130-140, 2016.</li> 
+
+<li>Yan Wang, Lei Li and <b>Guanfeng Liu</b>, Social Context-Aware Trust Inference for Trust Enhancement in Social Network based Recommendations on Service Providers, <i><b>World Wide Web Journal</b></i> Vol.18, Issue 1, 2015.</li>  
+
+<li><b>Guanfeng Liu</b>, Yan Wang, Mehmet A. Orgun and Ee-Peng Lim. Finding the Optimal Social Trust Path for the Selection of Trustworthy Service Providers in Complex Social Networks, <i><b>IEEE Transactions on Services Computing (TSC)</b></i>, Volume 6, Issue 2, 2013.</li>
+
+<li>Yongsheng Hao, <b>Guanfeng Liu</b> and Na Wen, An Enhanced Load Balancing Mechanism Based on Deadline Control on GridSim, <i><b>Future Generation Computer Systems</b></i>, Vol.28, No.4, April, 2012.</li>
 
    
 		</ol>
 
 
-		<font size="4.7"><b>International Conference Papers</b></font>
+<font size="4.7"><b>International Conference Papers</b></font>
 	<br>
 	<ol>
+
+
+<li>Rongwei Xu, <b>Guanfeng Liu</b>, Xianmei Hua, Shiqi Ye, Xuyun Zhang and Junwen Lu, Attention-aware Multi-hop Trust Inference in Online Social Networks, <b>DSAA</b> 2022.</li>
+
+
+<li>Xiaotong Xu, An Liu, <b>Guanfeng Liu</b>, Jiajie Xu and Lei Zhao, Acceptance-aware Multi-Platform Cooperative Matching in Spatial Crowdsourcing, <b>ICSOC</b> 2022.</li>
+
+<li>Xiaojia Xu, An Liu, <b>Guanfeng Liu</b>, Zhixu Li and Lei Zhao, Drive Less but Finish More: Food Delivery based on Multi-Level Workers in Spatial Crowdsourcing, <b>CIKM</b> 2022.</li>
+
+
+<li>Haiwen Du, Hui Shi, Pengpeng Zhao, Deqing Wang, Victor S. Sheng, Yanchi Liu, <b>Guanfeng Liu</b>, and Lei Zhao, Contrastive Learning with Bidirectional Transformers for Sequential Recommendation, <b>CIKM</b> 2022.</li>
+
+<li>Mingyuan Huang, Pengpeng Zhao, Xuefeng Xian, Jianfeng Qu, <b>Guanfeng Liu</b>, Yanchi Liu, and Victor S. Sheng, Help from Meta-Path: Node and Meta-Path Contrastive Learning for Recommender Systems, <b>IJCNN</b> 2022.</li>
+
+<li>Yaxing Fang, Pengpeng Zhao, Xuefeng Xian, Junhua Fang, <b>Guanfeng Liu</b>, Yanchi Liu, and Victor S. Sheng, Quaternion-Based Graph Contrastive Learning for Recommendation, <b>IJCNN</b> 2022.</li>
+
 
 <li>Chen Niu, An Liu, <b>Guanfeng Liu</b>, Jiajie Xu, and Lei Zhao, Representation Learning Based Query Decomposition for Batch Shortest Path Processing in Road Networks, <b>ICSOC</b> 2021.</li>
 
@@ -323,8 +354,8 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <div id="experience">
       <span class="sb">Working and Visiting</span> <br>
       <ul>
-      	<li>Senior Lecturer, Macquarie University, Sydney, Australia, January 2021 - now</li>
-      	<li>Lecturer/Assistant Professor, Macquarie University, Sydney, Australia, June 2018 - December 2020</li>
+      	<li>Senior Lecturer, Macquarie University, Sydney, Australia, January 2022 - now</li>
+      	<li>Lecturer/Assistant Professor, Macquarie University, Sydney, Australia, June 2018 - December 2021</li>
 		<li>Visiting Senior Lecturer, The University of Queensland, Brisbane, Australia, June 2017 - June 2018</li>
 		<li>Associate Professor, Soochow University, China, October 2013 - June 2017</li>
 		<li>Visiting Scholar, Macquarie University, Sydney, Australia, August 2015</li>
@@ -340,8 +371,10 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
       <span class="sb">Teaching</span> <br>
       
       <ul>
+	    <li>Data Science II, Macquarie University, S2 2022 (for Optus, Lecturer)</li>
+	    <li>Data Science, Macquarie University, S2 2022 (for Postgraduate Students, Lecturer)</li>
 	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
-		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021 (for Postgraduate Students, Lecturer)</li>
+		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022 (for Postgraduate Students, Lecturer)</li>
 		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020, 2021 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced System and Network Security, Macquarie University, S2 2018 (for Postgraduate Students, Lecturer)</li>
       	<li>Enterprise Systems Integration, Macquarie University, S2 2018, S2 2019 (for Undergraduate Students, Lecturer)</li>
@@ -369,6 +402,8 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
          <li>General Co-Chair, The 9th EAI International Conference on Cloud Computing (<a href="http://cloudcomp.eu/">CloudComp2019</a>), 4-5 December, 2019, Sydney, NSW, Australia.</li>
 		 <li>General Co-Chair, The International Workshop on Web Information Systems in the Era of AI in conjunction with WISE 2019, 26-30 November, 2019, Hong Kong, China.</li>
+
+		 <li> Guest Editor, Special issue on New Intrusion Detection Technology Driven by Artificial Intelligence, Applied Sciences, 2022.</li>
 		 
 	    <li> Guest Editor, Special issue on Computational Intelligence in Big Graph Data Management, IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI), 2021.</li>
 
@@ -394,10 +429,12 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
        <li>Publication Chair: APWeb2014, APWeb2016, BESC2016</li>
        <li>Publicity Chair: ATC2013, ATC2014</li>
 
-		<li>PC Member: IJCAI2022, AAAI2022, WWW2022, IEEE BigComp2022, WISE2022</li>
-	    <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
-	   <li>PC Member: IJCAI2020 (Senior PC), VLDB2020 Demo, AAAI2020, WWW2020, DASFAA2020, ECAI2020, SCC2020, WISE2020</li>
-	   <li>PC Member: KDD2019, IJCAI2019, AAAI2019, CIKM2019, WISE2019, AI2019, BigComp2019, NDBC2019, IEEE DSC2019, IEEE SCC2019</li>
+	
+	  <li>PC Member: ICDE2023, WSDM2023, WWW2023</li>
+	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022, IEEE BigComp2022, WISE2022</li>
+	  <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
+	  <li>PC Member: IJCAI2020 (Senior PC), VLDB2020 Demo, AAAI2020, WWW2020, DASFAA2020, ECAI2020, SCC2020, WISE2020</li>
+	  <li>PC Member: KDD2019, IJCAI2019, AAAI2019, CIKM2019, WISE2019, AI2019, BigComp2019, NDBC2019, IEEE DSC2019, IEEE SCC2019</li>
        <li>PC Member: DASFAA2018, NDBC2018, IJCAI2018, IEEE SCC2018, IEEE BigComp2018</li>
        <li>PC Member: ICYCSEE2017, BESC2017, IoP2017, NDBC2017, SOCA2017</li>
        <li>PC Member: ICWS2016, ICSOC2016, BESC2016, APWEB2016, TrustCom2016</li>
