--- a/index.htm
+++ b/index.htm
@@ -107,8 +107,8 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 			I am seeking highly motivated and focused students with Backgrounds &amp; Interests in Computer Science, Mathematics, and Engineering.
       
       <ul>
-      	    <li><a href="http://web.science.mq.edu.au/~gliu/Postgraduate.html">Master and PhD Students</a><a></a></li><a>
-      	    </a><li><a></a><a href="http://web.science.mq.edu.au/~gliu/COTUTELLE.html">Cotutelle&amp;Joint PhD Students (双博士项目)</a></li>
+      	    <li><a href="https://www.mq.edu.au/research/phd-and-research-degrees/scholarships/scholarship-search">Master and PhD Students</a><a></a></li><a>
+      	    </a><li><a></a><a href="https://www.mq.edu.au/research/phd-and-research-degrees/explore-research-degrees/cotutelle-and-joint-phd">Cotutelle&amp;Joint PhD Students (双博士项目)</a></li>
       	    <li><a href="https://www.mq.edu.au/research/phd-and-research-degrees/scholarships/scholarship-search/data/china-scholarship">China Scholar Council (CSC)-MQ Joint PhD Students</a></li>
       	    <li>Visiting Students and Internships</li>
 
@@ -221,6 +221,8 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	<ol>
 
 
+<li>Mingzhi Liu, <b>Guanfeng Liu</b> and Lijun Sun, Spatial-Temporal Dependence and Similarity Aware Traffic Flow Forecasting, <b><i>Information Sciences,</b></i> (accepted in December 2022).</li>
+
 
 <li>Yunyi Li, Yongjing Hao, Pengpeng Zhao, <b>Guanfeng Liu</b>, Yanchi Liu, Victor S. Sheng and Xiaofang Zhou, Edge-Enhanced Global Disentangled Graph Neural Network for Sequential Recommendation, <b><i>ACM Transactions on Knowledge Discovery from Data (TKDD),</b></i> (accepted in December 2022).</li>
 
@@ -231,7 +233,7 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 
 
-<li>Yipeng Zhou, Juncai Liu, Jessie Hui Wang, Jilong Wang, <b>Guanfeng Liu</b>, Di Wu, Chao Li and and Shui Yu, USST: A Two-Phase Privacy-Preserving Framework for Personalized Recommendation with Semi-Distributed Training, <b><i>Information Sciences</b></i> Vol. 606, pp. 688-701, August 2022.</li>
+<li>Yipeng Zhou, Juncai Liu, Jessie Hui Wang, Jilong Wang, <b>Guanfeng Liu</b>, Di Wu, Chao Li and and Shui Yu, USST: A Two-Phase Privacy-Preserving Framework for Personalized Recommendation with Semi-Distributed Training, <b><i>Information Sciences</b></i>, Vol. 606, pp. 688-701, August 2022.</li>
 
 
 <li>An Liu, Yifan Zhang, Xiangliang Zhang, <b>Guanfeng Liu</b>, Yanan Zhang, Zhixu Li, Lei Zhao, Qing Li, Xiaofang Zhou, xRepresentation Learning With Multi-Level Attention for Activity Trajectory Similarity Computation, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> Vol. 34, Issue 5, pp. 2387-2400, 2022.</li>
