--- a/index.htm
+++ b/index.htm
@@ -188,7 +188,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 		<li>Rongwei Xu, MRes+PhD Student, 2021-</li>
 		<li>Alex Amarouche Roudjiat, MRes+PhD student, 2021-</li>
 		<li>Xuankai Yang, PhD Student, 2022-</li>
-	 
+		<li>Han Zhang, PhD Student, 2023-</li>
+
+
 </ul>
 </div>
 <hr style="height: 3px;"> <br>
@@ -232,11 +234,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <li>Xuanhao Chen, Yan Zhao, <b>Guanfeng Liu</b>, Rui Sun and Xiaofang Zhou, Efficient Similarity-aware Influence Maximization in Geo-social Network, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> Vol. 34, Issue 10, pp. 4767-4780, 2022.</li>
 
 
-
 <li>Yipeng Zhou, Juncai Liu, Jessie Hui Wang, Jilong Wang, <b>Guanfeng Liu</b>, Di Wu, Chao Li and and Shui Yu, USST: A Two-Phase Privacy-Preserving Framework for Personalized Recommendation with Semi-Distributed Training, <b><i>Information Sciences</b></i>, Vol. 606, pp. 688-701, August 2022.</li>
 
 <li>Yipeng Zhou, Juncai Liu, Jessie Hui Wang, Jilong Wang, <b>Guanfeng Liu</b>, Di Wu, Chao Li and and Shui Yu, USST: A Two-Phase Privacy-Preserving Framework for Personalized Recommendation with Semi-Distributed Training, <b><i>Information Sciences</b></i> Vol. 606, pp. 688-701, August 2022.</li>
-
 
 
 <li>An Liu, Yifan Zhang, Xiangliang Zhang, <b>Guanfeng Liu</b>, Yanan Zhang, Zhixu Li, Lei Zhao, Qing Li, Xiaofang Zhou, xRepresentation Learning With Multi-Level Attention for Activity Trajectory Similarity Computation, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i></b> Vol. 34, Issue 5, pp. 2387-2400, 2022.</li>
@@ -251,6 +251,7 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 
 <li>Guohao Sun, <b>Guanfeng Liu</b>, Yan Wang, Mehmet A. Orgun, Quan Z. Sheng and Xiaofang Zhou, Incremental Graph Pattern based Node Matching with Multiple Updates, <b><i>IEEE Transactions on Knowledge and Data Engineering (TKDE)</b></i> Vol. 33, Issue 4, pp. 1585-1600, 2021.</li>
+
 
 
 <li>Yanan Zhang, <b>Guanfeng Liu</b>, An Liu, Yifan Zhang, Zhixu Li, Xiangliang Zhang, and Qing Li, Personalized Geographical Influence Modeling for POI Recommendation, <b><i>IEEE Intelligent Systems,</i></b> Vol.35, Issue 5, 2020.</li>
@@ -360,11 +361,6 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 <li><b>Guanfeng Liu</b>, Yan Wang and Mehmet A. Orgun, Quality of Trust for Social Trust Path Selection in Complex Social Networks, <b>AAMAS</b> 2010.</li>
 
-	
-	
-	
-
-
 	</ol>
 </div>
 <hr style="height: 3px;"> <br>
@@ -390,8 +386,8 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
       <ul>
 	    <li>Data Science II, Macquarie University, S2 2022 (for Optus, Lecturer)</li>
 	    <li>Data Science, Macquarie University, S2 2022 (for Postgraduate Students, Lecturer)</li>
-	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
-		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022 (for Postgraduate Students, Lecturer)</li>
+	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
+		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023 (for Postgraduate Students, Lecturer)</li>
 		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020, 2021 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced System and Network Security, Macquarie University, S2 2018 (for Postgraduate Students, Lecturer)</li>
       	<li>Enterprise Systems Integration, Macquarie University, S2 2018, S2 2019 (for Undergraduate Students, Lecturer)</li>
@@ -418,16 +414,10 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 
          <li>General Co-Chair, The 9th EAI International Conference on Cloud Computing (<a href="http://cloudcomp.eu/">CloudComp2019</a>), 4-5 December, 2019, Sydney, NSW, Australia.</li>
-
 	   
 	   <li>General Co-Chair, The International Workshop on Web Information Systems in the Era of AI in conjunction with WISE 2019, 26-30 November, 2019, Hong Kong, China.</li>
 
 	   <li> Guest Editor, Special issue on New Intrusion Detection Technology Driven by Artificial Intelligence, Applied Sciences, 2022.</li>
-
-		 <li>General Co-Chair, The International Workshop on Web Information Systems in the Era of AI in conjunction with WISE 2019, 26-30 November, 2019, Hong Kong, China.</li>
-
-		 <li> Guest Editor, Special issue on New Intrusion Detection Technology Driven by Artificial Intelligence, Applied Sciences, 2022.</li>
-
 		 
 	    <li> Guest Editor, Special issue on Computational Intelligence in Big Graph Data Management, IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI), 2021.</li>
 
@@ -444,8 +434,6 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	  <li>PC Co-Chair, Australasian Web Conference 2019 (AWC2019), 29-31 January, 2019, Sydney, NSW, Australia.</li>
 	  
 	  
-
-	
        <li>PC Co-Chair, The First Internal Workshops on Knowledge Acquisition, Representation and Management (KARM 2017) in conjunction with WISE2017, Moscow, Russia, 7-11 October, 2017. </li>
        	<li>PC Co-Chair, The Second International Workshop on Big Data Management and Service (BDMS2015) in conjunction with DASFAA2015, Hanoi, Vietnam, 20-23 April, 2015.</li>
 
@@ -453,6 +441,7 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
        <li>Publication Chair: APWeb2014, APWeb2016, BESC2016</li>
        <li>Publicity Chair: ATC2013, ATC2014</li>
 
+	
 	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023</li>
 	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022, IEEE BigComp2022, WISE2022</li>
 	  <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
