--- a/index.htm
+++ b/index.htm
@@ -190,8 +190,14 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 		<li>Xuankai Yang, PhD Student, 2022-</li>
 		<li>Han Zhang, PhD Student, 2023-</li>
 
-
 </ul>
+
+
+<font color="red" ,size="4"> Visitors</font>
+<ul>
+       	<li>Zhihong Cui, visiting PhD student, Shandong University, China, 2023-2024</li>
+       </ul>
+
 </div>
 <hr style="height: 3px;"> <br>
 
@@ -223,6 +229,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <li>P. Zhao, Y. Fang, G. Liu, Y. Liu, V. S. Sheng, L. Zhao and X. Zhou, <b>A Quaternion-Based Graph Convolution Network for Recommendation</b>, <i>World Wide Web Journal</i> (accepted in February 2023).</li>	
 
 
+<Li>J. Lu, X. Zhan, G. Liu, X. Zhan and X. Deng, <b>BSTC: A Fake Review Detection Model Based on a Pre-Trained Language Model and Convolutional Neural Network</b>, <i>Electronics,</i>Vol. 12, No. 10, May 2023.</li>
+
+
 
 <Li>P. Ding, G. Liu, Y. Wang, K. Zheng and X. Zhou, <b>MCTS: Adaptive Monte Carlo Tree Search for Temporal Path Discovery</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i>Vol. 15, pp. 2243-2257, March 2023.</li>
 
@@ -232,13 +241,17 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <li>F. Zhu, Y. Wang, J. Zhou, C. Chen, L. Li and G. Liu, <b>A Unified Framework for Cross-Domain and Cross-System Recommendations</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> Vol. 35, Issue 2, pp. 1171-1184, February 2023.</li>
 
 
-<li>M. Liu, G. Liu and L. Sun, <b>Spatial-Temporal Dependence and Similarity Aware Traffic Flow Forecasting</b>, <i>Information Sciences,</i> Vol. 625, pp. 81-96, May 2023.</li>
+<li>Y. Hao, J. Ma, P. Zhao, G. Liu X. Xian, L. Zhao and V.S. Sheng, <b>Multi-dimensional Graph Neural Network for Sequential Recommendation</b>, <i>Pattern Recognition</i>, Vol. 139, July 2023.</li>
+
+
+<li>M. Liu, G. Liu and L. Sun, <b>Spatial-Temporal Dependence and Similarity Aware Traffic Flow Forecasting</b>, <i>Information Sciences</i>, Vol. 625, pp. 81-96, May 2023.</li>
 
 
 <li>Y. Li, Y. Hao, P. Zhao, G. Liu, Y. Liu, V. S. Sheng and X. Zhou, <b>Edge-Enhanced Global Disentangled Graph Neural Network for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD),</i> (accepted in December 2022).</li>
 
 <li>G. Liu, L. Li, G. Liu and X. Wu, <b>Social Group Query Based on Multi-Fuzzy-Constrained Strong Simulation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD)</i> Vol. 16, Issue 3, pp. 1-27, 2022.</li>
 
+<li>B. Zheng, L. Ming, Q. Hu, Z. Lv, G. Liu and X. Zhou, <b>Supply-Demand-aware Deep Reinforcement Learning for Dynamic Fleet Management</b>, <i>ACM Transactions on Intelligent Systems and Technology (TIST)</i> Vol. 13, Issue 3, pp. 1-19, 2022.</li>
 
 
 <li>X. Chen, Y. Zhao, G. Liu, R. Sun and X. Zhou, <b>Efficient Similarity-aware Influence Maximization in Geo-social Network</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> Vol. 34, Issue 10, pp. 4767-4780, 2022.</li>
@@ -260,6 +273,10 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <li>G. Liu, Y. Wang, Z. Li, B. Zheng and K. Zheng, <b>Strong Social Graph Based Trust-Oriented Graph Pattern Matching with Multiple Constraints</b>, <i>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI), </i>pp.675-685, June 2020.</li>
 
 <li>K. Zheng, Y. Zhao, D. Lian, B. Zheng, G. Liu, X. Zhou, <b>Reference-Based Framework for Spatio-Temporal Trajectory Compression and Query Processing</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE)</i>, Vol. 32, Issue 11, pp. 2227-2240, 2020. </li>
+
+<li>G. Li, Q. Chen, B. Zheng, N. Hung, P. Zhoun and G. Liu, <b>Time-Aspect-Sentiment Recommendation Models Based on Novel Similarity Measure Methods</b>, <i>ACM Transactions on Web (TWEB)</i>, Vol. 14, Issue 2, pp. 1-26, 2020. </li>
+
+
 
 <li>A. Zhao, G. Liu, B. Zheng, Y. Zhao and K. Zheng, <b>Temporal Paths Discovery with Multiple Constraints in Attributed Dynamic Graphs</b>, <i>World Wide Web Journal</i> 23:313–336, 2020.</li>
 
@@ -295,6 +312,15 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	<br>
 	<ol>
 
+
+<li>H. Yuan, P. Zhao, X. Xian, G. Liu, Y. Liu, V. S. Sheng and L. Zhao <b>Sequential Recommendation with Probabilistic Logical Reasoning</b>, IJCAI 2023.</li>
+
+
+<li>H. Du, H. Yuan, P. Zhao, F. Zhuang, G. Liu, L. Zhao, Y. Liu and V. S. Sheng, <b>Ensemble Modeling with Contrastive Knowledge Distillation for Sequential Recommendation</b>, SIGIR 2023.</li>
+
+<li>X. Qin, H. Yuan, P. Zhao, J. Fang, F. Zhuang, G. Liu, Y. Liu and V. S. Sheng, <b>Meta-optimized Contrastive Learning for Sequential Recommendation</b>, SIGIR 2023.</li>
+
+<li>X. Du, H. Yuan, P. Zhao, J. Qu, F. Zhuang, G. Liu, Y. Liu and V. S. Sheng, <b>Frequency Enhanced Hybrid Attention Network for Sequential Recommendation</b>, SIGIR 2023.</li>
 
 <li>X. Du, H. Yuan, P. Zhao, J. Fang, G. Liu, Y. Liu, V. S. Sheng and X. Zhou, <b>Contrastive Enhanced Slide Filter Mixer for Sequential Recommendation</b>, ICDE 2023 (research track).</li>
 
@@ -406,7 +432,7 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	    <li>Data Science II, Macquarie University, S2 2022 (for Optus, Lecturer)</li>
 	    <li>Data Science, Macquarie University, S2 2022 (for Postgraduate Students, Lecturer)</li>
 	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
-		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023 (for Postgraduate Students, Lecturer)</li>
+		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
 		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020, 2021 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced System and Network Security, Macquarie University, S2 2018 (for Postgraduate Students, Lecturer)</li>
       	<li>Enterprise Systems Integration, Macquarie University, S2 2018, S2 2019 (for Undergraduate Students, Lecturer)</li>
@@ -431,6 +457,12 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 		<li>Editorial Board, Electronics, MDPI, Since 2021. </li>
 
 
+
+           
+           <li>General Co-Chair, IEEE DSAA2023 Special Session: Private, Secure, and Trust Data Analytics (<a href="https://pstda2023.github.io/">PSTDA2023</a>), 9-13 October, 2023, Thessaloniki, Greece.</li>
+           <li>General Co-Chair, IEEE DSAA2022 Special Session: Private, Secure, and Trust Data Analytics (<a href="https://xuyun-zhang.github.io/pstda2022/">PSTDA2022</a>), 13-16 October, 2022, Shenzhen, China.</li>
+
+           <li>General Co-Chair, The 3rd International Workshop on Privacy, Security, and Trust in Computational Intelligence (<a href="https://xuyun-zhang.github.io/pstci2021/">PSTCI2021</a>) in conjunction with CIKM 2021, 1-5 November, 2021, Queensland, Australia.</li>
 
          <li>General Co-Chair, The 9th EAI International Conference on Cloud Computing (<a href="http://cloudcomp.eu/">CloudComp2019</a>), 4-5 December, 2019, Sydney, NSW, Australia.</li>
 	   
