--- a/index.htm
+++ b/index.htm
@@ -229,6 +229,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 <li>P. Zhao, Y. Fang, G. Liu, Y. Liu, V. S. Sheng, L. Zhao and X. Zhou, <b>A Quaternion-Based Graph Convolution Network for Recommendation</b>, <i>World Wide Web Journal</i> (accepted in February 2023).</li>	
 
 
+<li>F. Wang, G. Li, Y. Wang, W. Rafique, M. Khosravi, G. Liu, Y. Liu and L. Qi, <b>Privacy-aware Traffic Flow Prediction based on Multi-party Sensor Data with Zero Trust in Smart City</b>, <i>ACM Transactions on Internet Technology (TOIT)</i> (accepted in January 2023).</li>	
+
+
 <Li>J. Lu, X. Zhan, G. Liu, X. Zhan and X. Deng, <b>BSTC: A Fake Review Detection Model Based on a Pre-Trained Language Model and Convolutional Neural Network</b>, <i>Electronics,</i>Vol. 12, No. 10, May 2023.</li>
 
 
@@ -246,10 +249,14 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 <li>M. Liu, G. Liu and L. Sun, <b>Spatial-Temporal Dependence and Similarity Aware Traffic Flow Forecasting</b>, <i>Information Sciences</i>, Vol. 625, pp. 81-96, May 2023.</li>
 
+<li>T. Yu, G. Liu, A. Liu, Z. Li and L. Zhao, <b>LIFOSS: A Learned Index Scheme for Streaming Scenarios</b>, <i>World Wide Web Journal</i>, Vol. 26, Issue 1, January 2023.</li>	
 
-<li>Y. Li, Y. Hao, P. Zhao, G. Liu, Y. Liu, V. S. Sheng and X. Zhou, <b>Edge-Enhanced Global Disentangled Graph Neural Network for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD),</i> (accepted in December 2022).</li>
+
+<li>Y. Li, Y. Hao, P. Zhao, G. Liu, Y. Liu, V. S. Sheng and X. Zhou, <b>Edge-Enhanced Global Disentangled Graph Neural Network for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD),</i> Vol. 17, Issue 6, April 2023</li>
 
 <li>G. Liu, L. Li, G. Liu and X. Wu, <b>Social Group Query Based on Multi-Fuzzy-Constrained Strong Simulation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD)</i> Vol. 16, Issue 3, pp. 1-27, 2022.</li>
+
+
 
 <li>B. Zheng, L. Ming, Q. Hu, Z. Lv, G. Liu and X. Zhou, <b>Supply-Demand-aware Deep Reinforcement Learning for Dynamic Fleet Management</b>, <i>ACM Transactions on Intelligent Systems and Technology (TIST)</i> Vol. 13, Issue 3, pp. 1-19, 2022.</li>
 
@@ -313,7 +320,10 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	<ol>
 
 
-<li>H. Yuan, P. Zhao, X. Xian, G. Liu, Y. Liu, V. S. Sheng and L. Zhao <b>Sequential Recommendation with Probabilistic Logical Reasoning</b>, IJCAI 2023.</li>
+<li>P. Ding, Y. Wang and G. Liu, <b>	Cross-heterogeneity Graph Few-shot Learning</b>, CIKM 2023.</li>
+
+
+<li>H. Yuan, P. Zhao, X. Xian, G. Liu, Y. Liu, V. S. Sheng and L. Zhao, <b>Sequential Recommendation with Probabilistic Logical Reasoning</b>, IJCAI 2023.</li>
 
 
 <li>H. Du, H. Yuan, P. Zhao, F. Zhuang, G. Liu, L. Zhao, Y. Liu and V. S. Sheng, <b>Ensemble Modeling with Contrastive Knowledge Distillation for Sequential Recommendation</b>, SIGIR 2023.</li>
