--- a/index.htm
+++ b/index.htm
@@ -48,8 +48,8 @@ line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
             <span>Deputy Director of Master by Research</span><br>
 			<span>Deputy Program Leader of Master of Information Systems Management</span><br>
 			 <!--<span>Program Leader of Master of Information System Management (MISM)</span><br>-->
-            <span><a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing/our-research/smart-system-and-data-engineering-group">Smart System and Data Engineering Research Group</a></span><br>
-            <span> <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/department-of-computing">School of Computing</a> </span><br>
+            <span><a href="https://www.mqdatax.net/">Macquarie University DataX Research Center</a></span><br>
+            <span> <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing">School of Computing</a> </span><br>
             <span> <a href="http://www.mq.edu.au/">Macquarie University</a> </span><br>
             <span> Sydney, Australia, 2109</span><br>
             <br>
@@ -63,7 +63,7 @@ line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
 <hr style="height: 3px;"> <br>
 <div id="description">
 <span style="font-size:110%">
-Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/department-of-computing"> School of Computing </a>, <a href="http://www.mq.edu.au/"> Macquarie University</a>, Sydney, Australia. Guanfeng got his PhD in computer science from <a href="http://www.mq.edu.au/">Macquarie University</a> in 2013. His research interests include graph database, trust management, and social network mining.
+Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing"> School of Computing </a>, <a href="http://www.mq.edu.au/"> Macquarie University</a>, Sydney, Australia. Guanfeng got his PhD in computer science from <a href="http://www.mq.edu.au/">Macquarie University</a> in 2013. His research interests include graph database, trust management, and social network mining.
  </span>
 </div>
 <br>
@@ -503,8 +503,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
        <li>Publicity Chair: ATC2013, ATC2014</li>
 
 	
-	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023</li>
-	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022, IEEE BigComp2022, WISE2022</li>
+	   <li>PC Member: WSDM2024, WWW2024</li>
+	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023 (Senior PC)</li>
+	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022,  IEEE BigComp2022, WISE2022</li>
 	  <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
 	  <li>PC Member: IJCAI2020 (Senior PC), VLDB2020 Demo, AAAI2020, WWW2020, DASFAA2020, ECAI2020, SCC2020, WISE2020</li>
 	  <li>PC Member: KDD2019, IJCAI2019, AAAI2019, CIKM2019, WISE2019, AI2019, BigComp2019, NDBC2019, IEEE DSC2019, IEEE SCC2019</li>
